public/styles/styles.css
#game {
    padding-left: 0;
    padding-right: 0;
    margin-left: auto;
    margin-right: auto;
    display: block;
    width: 800px;
}
h2 {
	text-align: center;
}

.container {

}

